--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy-firebase-prod": "ng build --prod --output-path dist && firebase use prod && firebase deploy && firebase open hosting:site",
     "deploy-firebase-dev": "ng build --prod --output-path dist && firebase use dev && firebase deploy && firebase open hosting:site",
     "deploy-githubpages": "ng build --prod --output-path docs --base-href Angular",
+    "deploy-linode": "ng build --prod --output-path linode --base-href pdtemplateanos5",
     "after deploy-githubpages do git add . commit & push": ""
   },
   "engines": {
