For GitHub Pages

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod",
+    "netlify now auto deployed on push" : "",
     "deploy-netlify": "ng build --prod --output-path dist  && netlify deploy",
     "deploy-firebase-prod": "ng build --prod --output-path dist && firebase use prod && firebase deploy && firebase open hosting:site",
     "deploy-firebase-dev": "ng build --prod --output-path dist && firebase use dev && firebase deploy && firebase open hosting:site",
     "deploy-githubpages": "ng build --prod --output-path docs --base-href Angular",
     "deploy-linode": "ng build --prod --output-path linode --base-href pdtemplateanos5",
-    "after deploy-githubpages do git add . commit & push": ""
+    "after deploy-githubpages do git add commit & push" : ""
   },
   "engines": {
     "node": "8.9.4",
