--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod",
-    "netlify now auto deployed on push" : "",
+    "netlify now auto deployed on push": "",
     "deploy-netlify": "ng build --prod --output-path dist  && netlify deploy",
     "deploy-firebase-prod": "ng build --prod --output-path dist && firebase use prod && firebase deploy && firebase open hosting:site",
     "deploy-firebase-dev": "ng build --prod --output-path dist && firebase use dev && firebase deploy && firebase open hosting:site",
     "deploy-githubpages": "ng build --prod --output-path docs --base-href Angular",
     "deploy-linode": "ng build --prod --output-path linode --base-href pdtemplateanos5",
-    "after deploy-githubpages do git add commit & push" : ""
+    "after deploy-githubpages do git add commit & push": ""
   },
   "engines": {
     "node": "8.9.4",
@@ -38,6 +38,7 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "ngx-logger": "^1.1.2",
     "rxjs": "^5.5.2",
     "surge": "^0.19.0",
     "typescript": "~2.4.2",
